--- a/instructions/1.md
+++ b/instructions/1.md
@@ -22,7 +22,7 @@ As in the introduction, you will be getting trade history data from the Gemini e
 In this step, and in future steps for this project, python tests will be run and built using `pytest` - please make sure your tests are compatible in this way.
 
 Once your implementation is done, write unit tests for the _parse_message function as well as the get_data function. In order to write a unit test,
-you must mock out the call to the kraken API using a `MagicMock`.
+you must mock out the call to the API using a `MagicMock`.
 
 We will also be interested in an integration test. This will actually hit the gemini server. Please create a new subfolder for this, and add a new
 GitHub action for it as well. 
